[package]
name = "bevy_playground"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[profile.dev]
opt-level=1

[profile.dev.package."*"]
opt-level=3

[dependencies]
#bevy = {version = "0.9", features = ["dynamic"]}
bevy = "0.9"
bevy-inspector-egui = "0.16"
console_error_panic_hook = "0.1"
rand = "0.8"
